# tri_bot_ws

./: .gitignore  CONTROL_INTERFACE.md  README.md  SESSION_HANDOFF.md
SessionHandoffSummary/: 0304
scripts/: check_sim_health.sh  start_decision_control_chain.sh  start_sim.sh  test_decision_control_acceptance.sh  test_position_controller.sh
src/tri_bot_bringup/: CMakeLists.txt  package.xml
src/tri_bot_control/: CMakeLists.txt  package.xml
src/tri_bot_control/src/: tvc_allocator.cpp
src/tri_bot_decision/: package.xml  setup.cfg  setup.py
src/tri_bot_decision/tri_bot_decision/: state_machine.py
src/tri_bot_description/: CMakeLists.txt  package.xml
src/tri_bot_description/config/: controllers.yaml
src/tri_bot_description/launch/: ardupilot.launch.py  display.launch.py  gazebo.launch.py
src/tri_bot_description/mesh/: EUN1_V7_TVC.STL  EUN1_V7_left_aileron.STL  EUN1_V7_left_rudder.STL  EUN1_V7_left_wing.STL  EUN1_V7_right_aileron.STL  EUN1_V7_right_rudder.STL  EUN1_V7_right_wing.STL  EUN1_V7_wheel_frame.STL
src/tri_bot_description/urdf/: tri_bot.xacro
src/tri_bot_description/worlds/: tri_bot_runway.sdf
src/tri_bot_interfaces/: CMakeLists.txt  package.xml
src/tri_bot_interfaces/msg/: TvcSetpoint.msg  VehicleState.msg
